--- a/aquarium-salinity.yaml
+++ b/aquarium-salinity.yaml
@@ -109,7 +109,6 @@ number:
     step: 0.01
     optimistic: true
     restore_value: true
-    unit_of_measurement: "°C"
 
   - platform: template
     name: "Last Calibration Timestamp"
@@ -127,8 +126,8 @@ number:
     name: "Temperature Calibration Slope"
     id: temp_cal_slope
     entity_category: config 
-    min_value: 0.85
-    max_value: 1.15
+    min_value: 0.80
+    max_value: 1.20
     initial_value: 0.9823
     step: 0.0001
     optimistic: true
@@ -156,15 +155,12 @@ sensor:
     id: temp_voltage
     update_interval: 5s
     accuracy_decimals: 4
-    internal: true  # Hide raw voltage reading
+    internal: false  # Hide raw voltage reading
     unit_of_measurement: "mV"
     filters:
       - multiply: 1000  # Convert to mV for consistency
       - median:
           window_size: 3  # Remove spikes first
-      - exponential_moving_average:
-          alpha: 0.3     # Increased from 0.15 for faster response to changes
-          send_every: 1
 
   # Raw temperature voltage for calibration purposes (no smoothing)
   - platform: ads1115
@@ -174,8 +170,8 @@ sensor:
     name: "Temperature Voltage (Raw)"
     id: temp_voltage_raw
     entity_category: diagnostic
-    update_interval: 5s
     accuracy_decimals: 4
+    update_interval: 5s
     internal: false  # Make visible for calibration reference
     unit_of_measurement: "mV"
     filters:
@@ -189,6 +185,7 @@ sensor:
     unit_of_measurement: "°C"
     device_class: "temperature"
     state_class: "measurement"
+    update_interval: 5s
     accuracy_decimals: 2
     lambda: |-
       float voltage_mV = id(temp_voltage).state;
@@ -230,6 +227,7 @@ sensor:
     state_class: "measurement"
     entity_category: diagnostic
     accuracy_decimals: 3
+    update_interval: 5s
     internal: false  # Make visible for calibration
     lambda: |-
       float voltage_mV = id(temp_voltage_raw).state;
@@ -282,7 +280,7 @@ sensor:
     unit_of_measurement: "mV"
     entity_category: diagnostic
     id: ec_voltage_raw
-    update_interval: 2s  # Faster updates for calibration
+    update_interval: 5s  # Faster updates for calibration
     accuracy_decimals: 4
     filters:
       - multiply: 1000  # Convert to mV
@@ -336,7 +334,7 @@ sensor:
     state_class: "measurement"
     entity_category: diagnostic
     accuracy_decimals: 2
-    update_interval: 10s
+    update_interval: 5s
     lambda: |-
       // Calculate EC value directly in this lambda instead of referencing ec_value sensor
       float voltage = id(ec_voltage).state;
@@ -462,7 +460,7 @@ button:
             float new_slope = reference_temp / raw_temp;
             
             // Reasonable bounds check
-            if (new_slope > 0.85 && new_slope < 1.15) {
+            if (new_slope > 0.80 && new_slope < 1.20) {
               auto call = id(temp_cal_slope).make_call();
               call.set_value(new_slope);
               call.perform();
